# Libtensor_by_Yang

./: CMakeLists.txt  README.md  main.cpp  tensor.cpp  tensor.h
Libtensor_by_Yang-main/: tensor.cpp  tensor.h
src/: cpu.cpp  cpu.h  descriptor_permute.cpp  descriptor_reduce.cpp  descriptor_select.cpp  descriptor_tensor.cpp  descriptor_tile.cpp  tensor.cpp  tensor.h  tensor_descriptors.h  utils.cpp  utils.h
